Fixed #31901 -- Prevented content overflowing in the admin changelist with navigation sidebar.

--- a/django/contrib/admin/static/admin/css/nav_sidebar.css
+++ b/django/contrib/admin/static/admin/css/nav_sidebar.css
@@ -104,3 +104,7 @@
         display: none;
     }
 }
+
+.change-list .main > #nav-sidebar+.content {
+    overflow: hidden;
+}
